--- a/app/elements/tokens-list-element.html
+++ b/app/elements/tokens-list-element.html
@@ -30,6 +30,7 @@
                     <paper-tooltip for="searchTokenBtn" position="top">Toggle Search</paper-tooltip>
                     <paper-icon-button id="searchTokenBtn" icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
                     <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
+                    <span hidden$="[[showSearchOption]]" class="label">Search tokens</span>
                     <paper-tooltip for="deleteTokenBtn" position="top">Delete</paper-tooltip>
                     <paper-icon-button id="deleteTokenBtn" hidden$="[[!showDeleteOption]]" on-tap="_deleteSelectedTokens" icon="delete"></paper-icon-button>
                     <span hidden$="[[!showDeleteOption]]" class="label">
