--- a/app/elements/scripts-list-element.html
+++ b/app/elements/scripts-list-element.html
@@ -26,6 +26,7 @@
                     <paper-tooltip for="searchScriptBtn" position="top">Toggle Search</paper-tooltip>
                     <paper-icon-button id="searchScriptBtn" icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
                     <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
+                    <span hidden$="[[showSearchOption]]" class="label">Search scripts</span>
                     <paper-tooltip for="runScriptBtn" position="top">Run Script</paper-tooltip>
                     <paper-icon-button id="runScriptBtn" hidden$="[[!showRunOption]]" on-tap="_runSelected" icon="schedule"></paper-icon-button>
                     <paper-tooltip for="editScriptBtn" position="top">Edit</paper-tooltip>
