--- a/app/elements/script-add-element.html
+++ b/app/elements/script-add-element.html
@@ -3,6 +3,7 @@
 
 <dom-module id="script-add-element">
     <template>
+        <style is="custom-style" include="forms"></style>
         <style include="shared-styles">
             :host {
                 display: block;
@@ -15,17 +16,18 @@
 
         <paper-card heading="Add Script">
             <div class="card-content">
+                <iron-grid>
                 <template is="dom-repeat" items="{{fields}}" as="field">
                     <template is="dom-if" if="[[_computeFieldType(field, 'text', field.show)]]">
-                        <paper-input id="[[field.name]]" placeholder="[[field.placeholder]]" label="[[field.label]]" value="{{field.value}}" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
+                        <paper-input class="s12" id="[[field.name]]" placeholder="[[field.placeholder]]" label="[[field.label]]" value="{{field.value}}" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
                     </template>
 
                     <template is="dom-if" if="[[_computeFieldType(field, 'textarea', field.show)]]">
-                        <paper-textarea id="[[field.name]]" label="[[field.label]]" rows="5" max-rows="15" value="{{field.value}}" placeholder="[[field.placeholder]]" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-textarea>
+                        <paper-textarea class="s12" id="[[field.name]]" label="[[field.label]]" rows="5" max-rows="15" value="{{field.value}}" placeholder="[[field.placeholder]]" auto-validate required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-textarea>
                     </template>
 
                     <template is="dom-if" if="[[_computeFieldType(field, 'dropdown', field.show)]]">
-                        <paper-dropdown-menu class="dropdown-block" label="[[field.label]]" horizontal-align="left">
+                        <paper-dropdown-menu class="dropdown-block s12 l6" label="[[field.label]]" horizontal-align="left">
                             <paper-menu id="[[field.name]]" attr-for-selected="value" selected="{{field.value}}" class="dropdown-content">
                                 <template is="dom-repeat" items="[[field.options]]" as="option">
                                     <paper-item value="[[option.val]]">[[option.title]]</paper-item>
@@ -35,10 +37,11 @@
                     </template>
                 </template>
 
-                <div class="clearfix">
+                <div class="clearfix bottom-actions s12">
                     <paper-button class="submit-btn pull-left" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
                     <paper-button class="submit-btn pull-right" raised on-tap="_resetForm">Reset</paper-button>
                 </div>
+                <iron-grid>
             </div>
         </paper-card>
 
