--- a/app/elements/details-page-element.html
+++ b/app/elements/details-page-element.html
@@ -4,153 +4,142 @@
     <template>
         <style is="custom-style" include="forms"></style>
         <style include="shared-styles">
-            :host {
-                display: block;
-            }
-
-            paper-material {
-                display: block;
-            }
-
-            .flex {
-                @apply(--layout-horizontal);
-                justify-content: flex-start;
-            }
-
-            .flex > * {
-                margin: 8px 32px 16px 0;
-            }
+        :host {
+            display: block;
+        }
+        
+        paper-material {
+            display: block;
+        }
         </style>
         <paper-material class="form">
             <h2>Account Details</h2>
-            <div class="flex">
-                <paper-input label="What's your first name?" required error-message="Please enter your first name" value="{{user.firstName}}"></paper-input>
-                <paper-input label="What's your last name?" required error-message="Please enter your last name" value="{{user.lastName}}"></paper-input>
-            </div>
-            <div class="flex">
-                <paper-input label="What's your company's name?" required error-message="Please enter your company's name" value="{{user.companyName}}"></paper-input>
-                <paper-dropdown-menu class="dropdown-block" label="Where is your business located?" horizontal-align="left">
+            <iron-grid>
+                <paper-input class="s12 l6" label="What's your first name?" required error-message="Please enter your first name" value="{{user.firstName}}"></paper-input>
+                <paper-input class="s12 l6" label="What's your last name?" required error-message="Please enter your last name" value="{{user.lastName}}"></paper-input>
+                <paper-input class="s12 l6" label="What's your company's name?" required error-message="Please enter your company's name" value="{{user.companyName}}"></paper-input>
+                <paper-dropdown-menu class="dropdown-block s12 l6" label="Where is your business located?" horizontal-align="left">
                     <paper-menu attr-for-selected="value" selected="{{user.country}}" class="dropdown-content">
                         <template is="dom-repeat" items="[[countriesOptions]]" as="country">
                             <paper-item value="[[country]]">[[country]]</paper-item>
                         </template>
                     </paper-menu>
                 </paper-dropdown-menu>
-                <paper-dropdown-menu class="dropdown-block" label="How many people work there?" horizontal-align="left">
+                <paper-dropdown-menu class="dropdown-block s12 l6" label="How many people work there?" horizontal-align="left">
                     <paper-menu attr-for-selected="value" selected="{{user.numberOfPeople}}" class="dropdown-content">
                         <template is="dom-repeat" items="[[numberOfPeopleOptions]]" as="people">
                             <paper-item value="[[people]]">[[people]]</paper-item>
                         </template>
                     </paper-menu>
                 </paper-dropdown-menu>
-                <paper-dropdown-menu class="dropdown-block" label="How many servers do you have?" horizontal-align="left">
+                <paper-dropdown-menu class="dropdown-block s12 l6" label="How many servers do you have?" horizontal-align="left">
                     <paper-menu attr-for-selected="value" selected="{{user.numberOfServers}}" class="dropdown-content">
                         <template is="dom-repeat" items="[[numberOfServersOptions]]" as="servers">
                             <paper-item value="[[servers]]">[[servers]]</paper-item>
                         </template>
                     </paper-menu>
                 </paper-dropdown-menu>
-            </div>
-            <div class="bottom-actions">
-                <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
-            </div>
+                <div class="bottom-actions s12">
+                    <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
+                </div>
+            </iron-grid>
         </paper-material>
         <iron-ajax id="ajax" url="/account" method="POST" on-request="_ajaxRequest" on-response="_ajaxResponse"></iron-ajax>
     </template>
     <script>
-        (function() {
-            'use strict';
+    (function() {
+        'use strict';
 
-            Polymer({
-                is: 'details-page-element',
+        Polymer({
+            is: 'details-page-element',
 
-                properties: {
-                    user: {
-                        type: Object,
-                        value: function() {
-                            return {
-                                firstName: FIRST_NAME,
-                                lastName: LAST_NAME,
-                                country: COUNTRY,
-                                companyName: COMPANY_NAME,
-                                numberOfPeople: NUMBER_OF_PEOPLE,
-                                numberOfServers: NUMBER_OF_SERVERS
-                            }
-                        },
-                        notify: true
-                    },
-                    countriesOptions: {
-                        type: Array,
-                        value: function() {
-                            return COUNTRIES;
+            properties: {
+                user: {
+                    type: Object,
+                    value: function() {
+                        return {
+                            firstName: FIRST_NAME,
+                            lastName: LAST_NAME,
+                            country: COUNTRY,
+                            companyName: COMPANY_NAME,
+                            numberOfPeople: NUMBER_OF_PEOPLE,
+                            numberOfServers: NUMBER_OF_SERVERS
                         }
                     },
-                    numberOfPeopleOptions: {
-                        type: Array,
-                        value: ['1-5', '6-20', '21-100', '100+']
-                    },
-                    numberOfServersOptions: {
-                        type: Array,
-                        value: ['1-5', '6-20', '21-100', '100+']
-                    },
-                    sendingData: {
-                        type: Boolean,
-                        value: false
-                    },
-                    formReady: {
-                        type: Boolean,
-                        computed: '_computeFormReady(user.firstName, user.lastName, user.country, user.companyName, user.numberOfPeople, user.numberOfServers, sendingData)'
+                    notify: true
+                },
+                countriesOptions: {
+                    type: Array,
+                    value: function() {
+                        return COUNTRIES;
                     }
                 },
-                ready: function() {
-
+                numberOfPeopleOptions: {
+                    type: Array,
+                    value: ['1-5', '6-20', '21-100', '100+']
                 },
-                _computeFormReady: function(firstName, lastName, country, companyName, numberOfPeople, numberOfServers) {
-                    return firstName && lastName && country && companyName && numberOfPeople && numberOfServers;
+                numberOfServersOptions: {
+                    type: Array,
+                    value: ['1-5', '6-20', '21-100', '100+']
                 },
-                _submitForm: function(e) {
-                    var payload = {
-                        action: 'update_details',
-                        first_name: this.user.firstName,
-                        last_name: this.user.lastName,
-                        last_name: this.user.lastName,
-                        company_name: this.user.companyName,
-                        country: this.user.country,
-                        number_of_servers: this.user.numberOfServers,
-                        number_of_people: this.user.numberOfPeople
-                    };
-
-                    this._fireEvents();
-
-                    //   this.$.ajax.body = payload;
-                    //   this.$.ajax.generateRequest();
+                sendingData: {
+                    type: Boolean,
+                    value: false
                 },
-                _ajaxRequest: function() {
-                    this.set('sendingData', true);
-                },
-                _ajaxResponse: function() {
-                    this.set('sendingData', false);
-                    this._fireEvents();
-                },
-                _fireEvents: function() {
-                    // Update user's info where needed
-                    this.fire('iron-signal', {
-                        name: 'user-menu',
-                        data: {
-                            firstName: this.user.firstName,
-                            lastName: this.user.lastName
-                        }
-                    });
-
-                    // Show a notification
-                    this._showNotification(this.user.firstName + ' your details were updated!');
-                },
-                _showNotification: function(title) {
-                    var notification = Polymer.dom(document).querySelector('notification-element');
-                    notification.title = title;
-                    notification._openToast();
+                formReady: {
+                    type: Boolean,
+                    computed: '_computeFormReady(user.firstName, user.lastName, user.country, user.companyName, user.numberOfPeople, user.numberOfServers, sendingData)'
                 }
-            });
-        })();
+            },
+            ready: function() {
+
+            },
+            _computeFormReady: function(firstName, lastName, country, companyName, numberOfPeople, numberOfServers) {
+                return firstName && lastName && country && companyName && numberOfPeople && numberOfServers;
+            },
+            _submitForm: function(e) {
+                var payload = {
+                    action: 'update_details',
+                    first_name: this.user.firstName,
+                    last_name: this.user.lastName,
+                    last_name: this.user.lastName,
+                    company_name: this.user.companyName,
+                    country: this.user.country,
+                    number_of_servers: this.user.numberOfServers,
+                    number_of_people: this.user.numberOfPeople
+                };
+
+                this._fireEvents();
+
+                //   this.$.ajax.body = payload;
+                //   this.$.ajax.generateRequest();
+            },
+            _ajaxRequest: function() {
+                this.set('sendingData', true);
+            },
+            _ajaxResponse: function() {
+                this.set('sendingData', false);
+                this._fireEvents();
+            },
+            _fireEvents: function() {
+                // Update user's info where needed
+                this.fire('iron-signal', {
+                    name: 'user-menu',
+                    data: {
+                        firstName: this.user.firstName,
+                        lastName: this.user.lastName
+                    }
+                });
+
+                // Show a notification
+                this._showNotification(this.user.firstName + ' your details were updated!');
+            },
+            _showNotification: function(title) {
+                var notification = Polymer.dom(document).querySelector('notification-element');
+                notification.title = title;
+                notification._openToast();
+            }
+        });
+    })();
     </script>
 </dom-module>
