hover state of row actions

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -332,7 +332,7 @@
             transform: translate3d(0, 0, 0);*/
         }
 
-        .row .row-actions:hover {
+        .row .row-actions paper-icon-button:hover {
             color: var(--mist-blue);
         }
         
