provide error class for step link in feedback element

--- a/app/elements/feedback-page-element.html
+++ b/app/elements/feedback-page-element.html
@@ -58,7 +58,7 @@
                 </a>
             </div>
             <div class="step">
-                <a class="container" href="#" on-tap="_pageChange" page="second" id="secondpage">
+                <a class="container error" href="#" on-tap="_pageChange" page="second" id="secondpage">
                     <span class="step-number">2</span>
                     <span class="step-title">Server details</span>
                 </a>
