--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -820,6 +820,15 @@
             font-weight: 500;
             opacity: 0.87;
         }
+        .step .error .step-number{
+            background-color: var(--red-color);
+            color: #fff;
+        }
+        
+        .step .error .step-title {
+            color: var(--red-color);
+            font-weight: 500;
+        }
         </style>
     </template>
 </dom-module>
