use of hr divider on form buttons for better separation of fields and buttons

--- a/app/elements/network-add-element.html
+++ b/app/elements/network-add-element.html
@@ -45,6 +45,7 @@
                                 <paper-checkbox  class="l4 s6" checked="{{field.value}}"> [[field.label]]</paper-checkbox>
                             </template>
                         </template>
+                        <hr class="s12"/>
                         <div class="clearfix bottom-actions s12">
                             <paper-button class="submit-btn pull-left" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
                             <paper-button class="submit-btn pull-right" raised on-tap="_resetForm">Reset</paper-button>
