--- a/app/elements/feedback-page-element.html
+++ b/app/elements/feedback-page-element.html
@@ -98,6 +98,7 @@
                             </template>
                         </paper-menu>
                     </paper-dropdown-menu>
+                    <hr class="s12"/>
                     <div class="bottom-actions clearfix s12">
                         <paper-button class="pull-right" disabled$="[[!firstFormReady]]" raised on-tap="_pageChange" page="second">Next</paper-button>
                     </div>
@@ -110,6 +111,7 @@
                         <paper-checkbox class="s12 l6" value="[[host.val]]" on-change="_toggleChecked">[[host.title]]</paper-checkbox>
                     </template>
                     <paper-input hidden$="[[!user.hasExtraHosted]]" label="Please specify where do you host your servers?" value="{{user.extraHosted}}"></paper-input>
+                    <hr class="s12"/>
                     <div class="bottom-actions clearfix s12">
                         <paper-button class="pull-right" disabled$="[[!secondFormReady]]" raised on-tap="_pageChange" page="third">Next</paper-button>
                     </div>
@@ -141,6 +143,7 @@
                     </paper-dropdown-menu>
                     <paper-input hidden$="[[!user.hasExtraAlternative]]" class="s12" label="Please specify which service would you use?" required error-message="Please specify which service would you use" value="{{user.extraAlternative}}"></paper-input>
                     <paper-textarea class="s12" label="How can we improve mist.io to better meet your needs?" rows="5" value="{{user.improve}}"></paper-textarea>
+                    <hr class="s12"/>
                     <div class="clearfix bottom-actions s12">
                         <paper-button class="pull-left" raised on-tap="_pageChange" page="first">Previous</paper-button>
                         <paper-button class="pull-right" disabled$="[[!secondFormReady]]" raised on-tap="_submitForm">Submit</paper-button>
