--- a/app/elements/script-add-element.html
+++ b/app/elements/script-add-element.html
@@ -36,6 +36,7 @@
                         </paper-dropdown-menu>
                     </template>
                 </template>
+                <hr class="s12"/>
                 <div class="notifications s12">
                     <div class="red">
                         <iron-icon icon="icons:error-outline"></iron-icon> Error message from server
@@ -49,7 +50,7 @@
                     <div class="blue">
                         Info message from server
                     </div>
-                </div>
+                </div>                
                 <div class="clearfix bottom-actions s12">
                     <paper-button class="submit-btn pull-left" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
                     <paper-button class="submit-btn pull-right" raised on-tap="_resetForm">Reset</paper-button>
