--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -651,6 +651,16 @@
         paper-dropdown-menu::content iron-dropdown .dropdown-content {
             width: 100%;
         }
+        paper-textarea.like-editor >::content textarea {
+            color: #fff !important;
+            padding: 2px !important;
+            padding: 4px 8px !important;
+            font-size: 0.9em !important;
+            font-family: monospace !important;
+        }
+        paper-textarea.like-editor >::content iron-autogrow-textarea {
+            background-color: var(--mist-dark-color);
+        }
         </style>
     </template>
 </dom-module>
