--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -261,7 +261,7 @@
         }
         
         ::content paper-item {
-            padding: 8px 16px;
+            padding: 16px;
             border-bottom: 1px solid #e5e5e5;
             min-height: inherit;
             cursor: pointer;
@@ -324,11 +324,12 @@
         
         .row-actions {
             position: absolute;
-            top: 10px;
+            top: 8px;
             right: 0;
             z-index: 999;
             display: none;
             transition: 200ms color;
+            height: inherit;
             /*opacity: 0;
             transition: 500ms all;
             transform: translate3d(200px, 0, 0);*/
