--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <link rel="stylesheet" href="styles/github-markdown.css">
 
         <!-- build:css styles/main.css -->
+        <link rel="stylesheet" href="styles/mist-grid.css">
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild-->
 
