add single page css in script page

--- a/app/elements/script-page-element.html
+++ b/app/elements/script-page-element.html
@@ -3,6 +3,7 @@
 
 <dom-module id="script-page-element">
     <template>
+        <style is="custom-style" include="single-page"></style>
         <style include="shared-styles">
             :host {
                 display: block;
