give sub-tems bg for less distraction on hover changes

--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -364,6 +364,7 @@
         
         ::content iron-collapse.sub-items {
             border-bottom: 2px solid #ccc;
+            background-color: #f6f6f6;
         }
         
         ::content iron-collapse.sub-items .info-item {
